--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,9 +1,8 @@
 :root {
   --floor-height: 60px;
   --shaft-width: 80px;
-  --label-width: 60px;
-  --times-width: 90px;
-  --calls-width: 100px;
+  --label-width: 90px;
+  --calls-width: 80px;
 }
 
 $color-bg: #ebebeb;
